--- a/static/css/main.css
+++ b/static/css/main.css
@@ -436,6 +436,7 @@ a:hover, a:active {
 	font-weight: 400;
 	font-size: 12px;
 	letter-spacing: 2.5px;
+	z-index: 10;
 }
 .main-navigation > div:first-of-type {
 	float: left;
@@ -749,7 +750,6 @@ a:hover, a:active {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-
 .site-branding {
 	padding: 3.2em 1.6em;
 	min-height: 550px;
@@ -759,6 +759,9 @@ a:hover, a:active {
 	margin-bottom: 0px;
 	padding-top: 100px;
 	padding-bottom: 100px;
+}
+.page-heading {
+	margin-top: 10%;
 }
 .site-title, .site-title a {
 	color: #343434;
