activate isotope, add template for grids

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1615,7 +1615,12 @@ div[itemprop="description"] {
 .woocommerce #order_comments {
 	height: 300px;
 }
-
+/*--------------------------------------------------------------
+## Isotope
+--------------------------------------------------------------*/
+.blog-items, .grid-sizer {
+	width: 25%;
+}
 /*=Media Queries
 ---------------------------------------------------------------------------*/
 
