--- a/static/css/main.css
+++ b/static/css/main.css
@@ -423,10 +423,9 @@ a:hover, a:active {
 --------------------------------------------------------------*/
 .main-navigation {
 	position: fixed;
-	background: #fff;
+	background: transparent;
 	right: 0;
 	left: 0;
-	border-bottom: 1px solid #eee;
 	clear: both;
 	display: block;
 	padding: 1.6em 2.5%;
@@ -456,7 +455,8 @@ a:hover, a:active {
 	margin-right: 0;
 }
 .main-navigation > div:first-of-type a {
-	border-bottom: 2px solid transparent;
+	color: #fff;
+	border-bottom: 2px solid #fff;
 	display: block;
 }
 .main-navigation ul ul {
@@ -752,7 +752,7 @@ a:hover, a:active {
 --------------------------------------------------------------*/
 .site-branding {
 	padding: 3.2em 1.6em;
-	min-height: 550px;
+	min-height: 100vh;
 	position: relative;
 	text-align: center;
 	margin-bottom: 0px;
@@ -762,6 +762,7 @@ a:hover, a:active {
 }
 .page-heading {
 	margin-top: 10%;
+	position: relative;
 }
 .page-heading h1 a, .page-heading h2 {
     color: #fff;
@@ -1621,12 +1622,16 @@ div[itemprop="description"] {
 ## Isotope
 --------------------------------------------------------------*/
 .blog-items, .grid-sizer {
-	width: 25%;
+	width: 33.333333%;
+}
+#blog-grid-container {
+	display: flex;
 }
 #blog-grid-container .blog-items {
 	padding: 0;
 	margin: 0;
 	border: none;
+	display: flex;
 }
 #blog-grid-container .blog-items img {
 	height: 100%;
