--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1648,11 +1648,7 @@ div[itemprop="description"] {
 	margin: 0;
 	border: none;
 	display: flex;
-}
-#blog-grid-container .blog-items img {
-	max-height: 300px;
-	width: 100%;
-	height: 100%;
+	min-height: 300px;
 }
 /*=Media Queries
 ---------------------------------------------------------------------------*/
