--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1640,15 +1640,61 @@ div[itemprop="description"] {
 .blog-items, .grid-sizer {
 	width: 33.333333%;
 }
-#blog-grid-container {
-	display: flex;
-}
 #blog-grid-container .blog-items {
 	padding: 0;
 	margin: 0;
 	border: none;
-	display: flex;
 	min-height: 300px;
+}
+#blog-grid-container .blog-items h2 {
+	z-index: 30;
+	position: relative;
+	color: #fff;
+}
+#blog-grid-container .blog-items::before {
+	-moz-transition: background 0.5s ease;
+    -webkit-transition: background 0.5s ease;
+    -ms-transition: background 0.5s ease;
+    transition: background 0.5s ease;
+    bottom: 0;
+    content: '';
+    display: block;
+    height: 100%;
+    left: 0;
+    opacity: 0.8;
+    position: absolute;
+    width: 100%;
+    z-index: 2;
+}
+.blog-items-hovered::before {
+	background: rgba(36, 41, 67, 0.25) !important;
+}
+#blog-grid-container .blog-items:nth-child(2)::before {
+	background-color: #6fc3df;
+}
+#blog-grid-container .blog-items:nth-child(3)::before {
+	background-color: #8d82c4;
+}
+#blog-grid-container .blog-items:nth-child(4)::before {
+	background-color: #ec8d81;
+}
+#blog-grid-container .blog-items:nth-child(5)::before {
+	background-color: #e7b788;
+}
+#blog-grid-container .blog-items:nth-child(6)::before {
+	background-color: #8ea9e8;
+}
+#blog-grid-container .blog-items:nth-child(7)::before {
+	background-color: #87c5a4;
+}
+#blog-grid-container .blog-items:nth-child(8)::before {
+	background-color: #0e5957;
+}
+#blog-grid-container .blog-items:nth-child(9)::before {
+	background-color: #ea735d;
+}
+#blog-grid-container .blog-items:nth-child(10)::before {
+	background-color: #542733;
 }
 /*=Media Queries
 ---------------------------------------------------------------------------*/
