--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1641,11 +1641,8 @@ div[itemprop="description"] {
 	width: 33.333333%;
 }
 #blog-grid-container .blog-items {
-	padding: 0;
-	margin: 0;
-	border: none;
 	min-height: 300px;
-	position: absolute;
+	position: relative;
 }
 #blog-grid-container .blog-items h2 {
 	z-index: 30;
