minor fixed to activate fixed menu js

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -438,6 +438,7 @@ a:hover, a:active {
 .main-navigation {
 	position: fixed;
 	background: transparent;
+	top: 0;
 	right: 0;
 	left: 0;
 	clear: both;
