--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1652,6 +1652,16 @@ div[itemprop="description"] {
 	z-index: 30;
 	position: relative;
 	color: #fff;
+	text-align: center;
+	font-size: 1.8em;
+	text-transform: uppercase;
+	margin-top: 4em;
+}
+#blog-grid-container .blog-items h2 a {
+	color: #fff;
+}
+#blog-grid-container .blog-items h2 a:hover {
+	text-decoration: underline;
 }
 #blog-grid-container .blog-items::before {
 	-moz-transition: background 0.5s ease;
