--- a/static/css/main.css
+++ b/static/css/main.css
@@ -758,11 +758,11 @@ a:hover, a:active {
 /*--------------------------------------------------------------
 # Clearings
 --------------------------------------------------------------*/
-.clear:before, .clear:after, .entry-content:before, .entry-content:after, .comment-content:before, .comment-content:after, .site-header:before, .site-header:after, .site-content:before, .site-content:after, .site-footer:before, .site-footer:after, .hentry:before, .hentry:after {
+.entry-content:before, .entry-content:after, .comment-content:before, .comment-content:after, .site-header:before, .site-header:after, .site-content:before, .site-content:after, .site-footer:before, .site-footer:after, .hentry:before, .hentry:after {
 	content: "";
 	display: table;
 }
-.clear:after, .entry-content:after, .comment-content:after, .site-header:after, .site-content:after, .site-footer:after, .hentry:after {
+.entry-content:after, .comment-content:after, .site-header:after, .site-content:after, .site-footer:after, .hentry:after {
 	clear: both;
 }
 /*--------------------------------------------------------------
