--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1363,7 +1363,7 @@ embed, iframe, object {
 	float: right;
 }
 .site-info {
-	border-top: 1px solid #eee;
+	border-top: solid 1px rgba(212, 212, 255, 0.1);
 	font-size: 13px;
 	margin: 1.6em 0 0;
 	padding: 2.5%;
